"first commit of index.html file"

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
+<h1>Last Updated December 20, 2017 Hello World</h1>
 <p>This is my barebones portfolio.</p>
 <ul>
 <li>Microsoft TouchDevelop Customized Robot Game
